--- a/HW2/main.html
+++ b/HW2/main.html
@@ -1,5 +1,5 @@
 <html>
-<head><meta charset="utf-8"></head>
+<head><meta charset="UTF-8"></head>
 <style>
 table {
     width: 800px;
@@ -34,7 +34,7 @@ body{
 }
 </style>
 <body>
-    <h1>我不是原創</h1>
+    <h1>I am not origin</h1>
 <hr>
 <a href="./99.html"> homework 99</a>
 <a href="./draw.html"> mid homework</a>
